--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,6 @@
   ja:
     enums:
       order:
-        payment_method:
+        payment_way:
           credit_card: "クレジットカード"
           transfer: "銀行振込"
