--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,10 +1,10 @@
-  ja:
-    enums:
-      order:
-        payment_way:
-          credit_card: "クレジットカード"
-          transfer: "銀行振込"
-      customer:
-        is_deleted:
-          false:"有効"
-          true:"退会"
+ja:
+  enums:
+    order:
+      payment_way:
+        credit_card: 'クレジットカード'
+        transfer: '銀行振込'
+  customer:
+    is_deleted:
+      false: "有効"
+      true: "退会"
